# etavardt

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README  README.md  RUNME1ST.BAT
.github/workflows/: cmake.yml
cppcheck/: CMakeLists.txt.abandoned  Launch-cppcheck-gui.bat  Launch-cppcheck-gui.sh  bob.cppcheck
modeler/: BKGRAPH.H  BKMATH.H  ED.DOC  ED.DSK  ED.PRJ  EDCMD.C  EDDIA.C  EDEDIT.C  EDFILE.C  EDGRAPH.C  EDKEY.H  EDMAIN.C  EDMAIN.H  EDMOVE.C  EDOBJECT.C  EDOCMD.C  EDOEXEC.C  EDOMODE.H  EDPRIM.C  EDPROTOS.H  EDRES.DOC  EDSCMODE.H  EDSTAT.C  EDSTCMD.C  EDSTEXEC.C  EDSTMODE.H  EDSYS.C  EDVCMD.C  EDVERTEX.C  EDVEXEC.C  EDVMODE.H  STUDIO.B  TEST.BO
proc/: HEXER.C  HEXER__C.BAT  RUNALL.BAT  SPHRFLAK.C  SPHRFL_C.BAT  SPONGE.C  SPONGE_C.BAT  TILEPUZL.C  TILEPU_C.BAT  TORUS.C  TORUS__C.BAT  TREES.C  TREES__C.BAT
proczbuf/: BKDEFS.H  BKGLOBS.H  BKGRAPH.C  BKQDEFS.H  BKQUAT.C  BKQUAT.H  BKZBUF.C  BKZBUF.H  CPM-JSET.C  CPM-JSET.DSK  CPM-JSET.PRJ  CPM-MSET.C  CPM-MSET.DSK  CPM-MSET.PRJ  OCEAN.C  OCEAN.DSK  OCEAN.PRJ  PLOTEQN.C  PLOTEQN.DSK  PLOTEQN.PRJ  QUATER.C  QUATER.DSK  QUATER.PRJ  QUATER2.C  QUATER2.DSK  QUATER2.PRJ  RUNALL.BAT  SM.BAT  TERRAIN.C  TERRAIN.DSK  TERRAIN.PRJ
rt/: .clang-format  CMakeLists.txt  CMakeTest.bat  DevEnvSetup.bat  DevTest.bat  RUNME1ST.BAT  TEST.BAT  venus3.img.tst  venus3.tga  venus3_tst.img  venus3_tst.tga  yyz.b.tst
rt/bkgs/: SKY.MAP
rt/cols/: COLOR.BC
rt/maps/: ALGORITH.IMG  BALL1.IMG  BALL10.IMG  BALL11.IMG  BALL12.IMG  BALL13.IMG  BALL14.IMG  BALL15.IMG  BALL2.IMG  BALL3.IMG  BALL4.IMG  BALL5.IMG  BALL6.IMG  BALL7.IMG  BALL8.IMG  BALL9.IMG  BRICK.IMG  CCDM27.IMG  CCDM31.IMG  CCDMOON.IMG  CCDSATRN.IMG  CNN.IMG  PALERMO.IMG  PATTERN.IMG  PLANETS2.IMG  SHUTTLE.IMG  VIVID1.IMG
rt/objs/: &.BO  BALLS2.BO  BASIN.BO  BISHOP.BO  BLOCK.BO  BOBLOGO.BO  BOBLOGO2.BO  BOX.BO  CHALK.BO  CLIPS.BO  COLUMN.BO  COLUMN2.BO  CRYPT.BO  CRYPTSEC.BO  CUBE.BO  DIE2.BO  DODECA.BO  DUCK.BO  F117.BO  HEART.BO  HOTROD.BO  ICE.BO  ICOSA.BO  KING.BO  KNIGHT.BO  M.BO  MANSFACE.BO  NEFERTT.BO  OCTA.BO  PAWN.BO  POOLBALL.BO  QUEEN.BO  ROOK.BO  SCULPT.BO  SKULL2.BO  SOLID.BO  STICK.BO  STRIPE.BO  T.BO  TEAPOT.BO  (+3 more)
rt/scns/: AMP.B  ANTALIOF.B  ANTALION.B  AXIS.B  BASIN1.B  BKG2.B  BLEND1.B  BLEND2.B  BLEND3.B  BLEND4.B  BOBSTUFF.B  BOX.B  BOX1.B  CAUSTIC.B  CHESS4.B  CLIP1.B  CLIP2.B  CLIP3.B  CLIP4.B  CLIP5.B  CLIP6.B  CLIP7.B  CLIP8.B  CLIP9.B  COL1.B  CPMJSET1.B  CPMJSET2.B  CPMMSET1.B  CPMMSET2.B  CRYPT1.B  DICE1.B  DRAGON.B  DRAGON2.B  DUCKS.B  F117.B  FACES.B  FLOOR3.B  FOCUS.B  GALLERY.B  HEART.B  (+32 more)
rt/src/: App.cpp  App.hpp  BOBBOR_C.BAT.remove  BOB____C.BAT.remove  BOUND.C  Bob.cpp  Bob.hpp  BobMath.hpp  Bound_3D.cpp  Bound_3D.hpp  Bump_3D.hpp  CLIP.C  CONE.C  CONFIG.H  Camera_3D.cpp  Camera_3D.hpp  Clip_3D.cpp  Clip_3D.hpp  Color.cpp  Color.hpp  Cone_3D.cpp  Cone_3D.hpp  DATA.C  DEFS.H  ERROR.C  EXTERN.H  Exception.hpp  FILE.C  INTER.C  Isect_3D.cpp  Isect_3D.hpp  Light_3D.cpp  Light_3D.hpp  MAIN.C  MEMORY.C  Matrix_3D.cpp  Matrix_3D.hpp  NOISE.C  Noise.cpp  Noise.hpp  (+104 more)
rt/srfs/: SRFS.TXT
rt/test/: Point_3D_test.cpp  TransformMatrix_3D_test.cpp  Vector_3D_test.cpp  bob_tests.cpp  toms_test.cpp
sample/: 3D-3PORB.C  3D-3PORB.DSK  3D-3PORB.PRJ  BKMATH.C  CRYSTAL.C  CRYSTAL.DSK  CRYSTAL.PRJ  PLANTS.C  PLANTS.DSK  PLANTS.PRJ  RUNALL.BAT  STARS-3D.C  STARS-3D.DSK  STARS-3D.PRJ
tools/: AVERAGE.FLT  CMakeLists.txt  LMR.FLT  UNITY.FLT  VERTICAL.FLT
tools/filter/: DIAGLAPL.FLT  FILT.BAT  FILTER.C  FILTER_C.BAT  HORIZNTL.FLT  LAPLAC.FLT
tools/img2gif/: ERRS.H  GIF2IMG.C  GIF____C.BAT  IMG2GIF.C
tools/img2tga/: CMakeLists.txt  IMG2TGA.C  TGA2IMG.C  TGA____C.BAT  img2tga.cpp
tools/viewgif/: GIFVIEW.C  GIFV___C.BAT  STD.H
tools/viewtga/: ASSEMBLE.BAT  TRUE.ASM  TRUE.H  VIEW.C  VIEW.DSK  VIEW.PRJ
